--- a/1_Kickers_NFLData.ipynb
+++ b/1_Kickers_NFLData.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis of Fantasy Football Kickers\n",
-    "### Matthew Johnson, Aug. 8, 2018\n",
-    "#### Data source: https://www.kaggle.com/maxhorowitz/nflplaybyplay2009to2016\n",
+    "#### Matthew Johnson, Aug. 8, 2018 (Last updated: August 13, 2018)\n",
+    "##### Data source: https://www.kaggle.com/maxhorowitz/nflplaybyplay2009to2016\n",
     "\n",
-    "- Vegas odds?\n",
-    "- Weather?"
+    "1. **NFL Data**\n",
+    "2. Vegas odds\n",
+    "3. Weather"
    ]
   },
   {
@@ -155,58 +156,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "vals = ['Touchdown','ExPointGood', 'ExPointBad', 'FieldGoalGood', 'FieldGoalBad', 'TwoPointGood', 'TwoPointConv', 'CompletePass', \n",
-    "        'IncompletePass', 'Yards.Gained', 'FG_30', 'FG_40', 'FG_50', 'yrdline100', 'Punt', 'QB Kneel', 'Drive', 'Week', 'gameid']\n",
+    "        'IncompletePass', 'Yards.Gained', 'FG_30', 'FG_40', 'FG_50', 'yrdline100', 'Punt', 'QB Kneel', 'Drive', 'Week', 'gameid',\n",
+    "       'FirstDown', 'down']\n",
     "aggs = {'Touchdown': np.sum,'ExPointGood':np.sum, 'ExPointBad':np.sum, 'FieldGoalGood': np.sum, \n",
     "        'FieldGoalBad':np.sum, 'TwoPointGood':np.sum, 'TwoPointConv':np.sum, 'CompletePass':np.sum, \n",
     "        'IncompletePass':np.sum, 'Yards.Gained':np.sum, 'FG_30':np.sum, 'FG_40':np.sum, 'FG_50':np.sum,\n",
-    "        'yrdline100': max, 'Punt':np.sum, 'QB Kneel':np.sum, 'Drive': max, 'Week': max, 'gameid': max}\n",
+    "        'yrdline100': max, 'Punt':np.sum, 'QB Kneel':np.sum, 'Drive': max, 'Week': max, 'gameid': max,\n",
+    "       'FirstDown':np.sum, 'down' : max}\n",
     "\n",
     "vals2 = ['Touchdown','ExPointGood', 'ExPointBad', 'FieldGoalGood', 'FieldGoalBad', 'TwoPointGood', 'TwoPointConv', 'CompletePass', \n",
     "        'IncompletePass', 'Yards.Gained', 'FG_30', 'FG_40', 'FG_50','PointsScored', 'Week','gameid',\n",
-    "        'Kicker_Pts', 'FG_range', 'RedZone', 'Punt', 'QB Kneel', 'Drive', '3rdDown', '3rdDownSuccess']\n",
+    "        'Kicker_Pts', 'Kicker_Pts2', 'FG_range', 'RedZone', 'Punt', 'QB Kneel', 'Drive', '3rdDown', '3rdDownSuccess','FirstDown']\n",
     "aggs2 = {'Touchdown': np.sum,'ExPointGood':np.sum, 'ExPointBad':np.sum, 'FieldGoalGood': np.sum, \n",
     "        'FieldGoalBad':np.sum, 'TwoPointGood':np.sum, 'TwoPointConv':np.sum, 'CompletePass':np.sum, \n",
     "        'IncompletePass':np.sum, 'Yards.Gained':np.sum, 'FG_30':np.sum, 'FG_40':np.sum, 'FG_50':np.sum,\n",
     "        'FG_range': np.sum, 'RedZone':np.sum,'PointsScored': np.sum, 'Punt':np.sum, 'QB Kneel':np.sum, \n",
-    "         'Drive': max, 'Kicker_Pts':np.sum, '3rdDown': np.sum, '3rdDownSuccess':np.sum, 'Week': max, 'gameid': max}\n",
+    "         'Drive': max, 'Kicker_Pts':np.sum, '3rdDown': np.sum, '3rdDownSuccess':np.sum, 'Week': max, 'gameid': max,\n",
+    "        'FirstDown':np.sum, 'Kicker_Pts2': np.sum}\n",
     "\n",
     "dropVals_off = ['CompletePass','ExPointBad', 'ExPointGood', 'FG_30', 'FG_40',\n",
     "       'FG_50', 'FG_range', 'FieldGoalBad', 'FieldGoalGood', 'IncompletePass', 'PointsScored', 'Punt', 'QB Kneel', 'RedZone',\n",
-    "       'Touchdown', 'TwoPointGood','Yards.Gained']\n",
-    "\n",
+    "       'Touchdown', 'TwoPointGood','Yards.Gained', 'Week_rolling5', '3rdDown_rolling5',\n",
+    "        'gameid_rolling5']\n",
     "dropVals_def = ['DEF_CompletePass','DEF_ExPointBad', 'DEF_ExPointGood',\n",
-    "       'DEF_FG_30', 'DEF_FG_40', 'DEF_FG_50', 'DEF_FG_range', 'DEF_Kicker_Pts'\n",
+    "       'DEF_FG_30', 'DEF_FG_40', 'DEF_FG_50', 'DEF_FG_range', 'DEF_Kicker_Pts',\n",
     "       'DEF_FieldGoalBad', 'DEF_FieldGoalGood', 'DEF_IncompletePass', 'DEF_PointsScored', 'DEF_Punt', 'DEF_QB Kneel',\n",
-    "       'DEF_RedZone', 'DEF_Touchdown', 'DEF_TwoPointConv', 'DEF_TwoPointGood', 'DEF_Yards.Gained']"
+    "       'DEF_RedZone', 'DEF_Touchdown', 'DEF_TwoPointConv', 'DEF_TwoPointGood', 'DEF_Yards.Gained',\n",
+    "        'DEF_3rdDown',  'DEF_Drive', 'DEF_3rdDown', 'DEF_gameid', 'DEF_3rdDown_rolling5', \n",
+    "        'DEF_QB Kneel_rolling5', 'DEF_gameid_rolling5']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 200,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def make_pivot_tables(dummied_data):\n",
     "    pivot = pd.pivot_table(dummied_data.reset_index(drop=True), index=[\"posteam\", \"GameID\", \"DefensiveTeam\", 'drive'], \n",
     "                       values = vals, aggfunc=aggs )\n",
     "\n",
-    "    pivot['PointsScored'] = 6*pivot['Touchdown'] + pivot['ExPointGood'] +  3*pivot['FieldGoalGood'] + 2*pivot['TwoPointGood']\n",
+    "    pivot['PointsScored'] = 6*pivot['Touchdown'] + pivot['ExPointGood'] +  3*pivot['FieldGoalGood'] + 2*pivot['TwoPointGood'] \n",
     "    \n",
-    "    pivot['Kicker_Pts'] = pivot['ExPointGood'] + 3*pivot['FG_30'] + 4*pivot['FG_40'] + 5*pivot['FG_50']\n",
-    "\n",
+    "    pivot['Kicker_Pts'] = pivot['ExPointGood'] + 3*pivot['FG_30'] + 4*pivot['FG_40'] + 5*pivot['FG_50'] - 1*pivot['FieldGoalBad']\n",
+    "    pivot['Kicker_Pts2'] = pivot['Kicker_Pts'] - 1*pivot['FieldGoalBad']\n",
     "    pivot['FG_range'] = 1*(pivot['yrdline100']>=60)\n",
     "    pivot['RedZone'] = 1*(pivot['yrdline100']>=80)\n",
-    "    pivot['3rdDown'] = 1*(dummied_data['down']==3.0)\n",
-    "    pivot['3rdDownSuccess'] = 1*(dummied_data['down']==3)*(dummied_data['Yards.Gained']>dummied_data['ydstogo'])\n",
+    "    pivot['3rdDown'] = 1*(pivot['down']==3.0)\n",
+    "    pivot['3rdDownSuccess'] = 1*(pivot['down']==3.0)*(pivot['FirstDown']==1.0)\n",
     "\n",
     "    pivot_weekly = pd.pivot_table(pivot, index=[\"posteam\", \"GameID\", \"DefensiveTeam\"], values = vals2, aggfunc=aggs2)\n",
     "\n",
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 169,
    "metadata": {
     "collapsed": true
    },
@@ -258,13 +262,13 @@
     "    pivotO['RZ_per_drive'] = pivotO['RedZone_rolling5']/pivotO['Drive_rolling5']\n",
     "    pivotD['DEF_FG_range_per_drive'] = pivotD['DEF_FG_range_rolling5']/pivotD['DEF_Drive_rolling5']\n",
     "    pivotD['DEF_RZ_per_drive'] = pivotD['DEF_RedZone_rolling5']/pivotD['DEF_Drive_rolling5']\n",
-    "    \n",
+    "\n",
     "    return pivotO, pivotD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 149,
    "metadata": {
     "collapsed": true
    },
@@ -280,7 +284,7 @@
     "    tempdf['defenseTeam'] = defTeam\n",
     "    tempdf.index = tempdf['offenseTeam']+ '-' + str(gameID)\n",
     "    \n",
-    "    return tempdf.drop('offenseTeam', axis=1)"
+    "    return tempdf   #.drop('offenseTeam', axis=1)"
    ]
   },
   {
@@ -311,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,9 +329,33 @@
     "        pivot_off, pivot_def = add_rolling(pivot_weekly, pivot_def)\n",
     "        train = make_train_data(df, pivot_off, pivot_def)\n",
     "        train['Season'] = year\n",
-    "        save_train_data(train, year)\n",
+    "        #save_train_data(train, year)\n",
     "        annual_dfs.append(train)\n",
-    "    return annual_dfs"
+    "        \n",
+    "    return finish_up_df(pd.concat(annual_dfs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def finish_up_df(X):\n",
+    "    X['punts_per_drive'] = X['Punt_rolling5']/X['Drive_rolling5']\n",
+    "    X['DEF_punts_per_drive'] = X['DEF_Punt_rolling5']/X['DEF_Drive_rolling5']\n",
+    "    X.drop(['DEF_ExPointBad_rolling5', 'DEF_FG_30_rolling5', 'DEF_FG_40_rolling5', 'DEF_Week', \n",
+    "            'DEF_Week_rolling5','DEF_FG_50_rolling5', 'DEF_FieldGoalBad_rolling5', 'DEF_Punt_rolling5',\n",
+    "            'DEF_TwoPointConv_rolling5', 'DEF_TwoPointGood_rolling5'], axis=1, inplace=True)\n",
+    "    X['gameid'] = X['gameid'].astype(str)\n",
+    "    X['date'] = (X['gameid'].str[4:6] + '/' + X['gameid'].str[6:8]).str.lstrip('0')\n",
+    "    X['offenseTeam']= X['offenseTeam'].str[0:4].str.strip('-')\n",
+    "    X['offenseTeam']= X['offenseTeam'].str.rstrip('-2')\n",
+    "    X['Season'] = X['Season'].astype(str)\n",
+    "    X['mergeCode'] = X['Season'] + '-' + X['date'] +'-'+ X['offenseTeam']\n",
+    "    X['mergeCode2'] = X['Season']+'-'+ X['Week'].astype(str)+'-' + X['offenseTeam']\n",
+    "\n",
+    "    return X"
    ]
   },
   {
@@ -339,47 +367,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
-    "annual_data_15to17 = make_annual_dfs(2009, 2018)"
+    "data09_17 = make_annual_dfs(2009, 2017)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "annual_data_09to14 = make_annual_dfs(2009, 2015)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data15to17 = pd.concat(annual_data_15to17)\n",
-    "data09to14 = pd.concat(annual_data_09to14)\n",
-    "data09to17 = pd.concat([data09to14, data15to17])"
+    "#data09_17.to_csv('kicker_data_09_17.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 206,
    "metadata": {
     "scrolled": false
    },
@@ -410,44 +416,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>DEF_Kicker_Pts2</th>\n",
+       "      <td>0.994070</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Kicker_Pts2_rolling5</th>\n",
+       "      <td>0.470879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>Kicker_Pts_rolling5</th>\n",
-       "      <td>0.475565</td>\n",
+       "      <td>0.469575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DEF_Kicker_Pts_rolling5</th>\n",
-       "      <td>0.462105</td>\n",
+       "      <td>0.466118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DEF_Kicker_Pts2_rolling5</th>\n",
+       "      <td>0.463410</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DEF_FieldGoalGood_rolling5</th>\n",
-       "      <td>0.344189</td>\n",
+       "      <td>0.352015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FieldGoalGood_rolling5</th>\n",
-       "      <td>0.342829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DEF_FG_40_rolling5</th>\n",
-       "      <td>0.241117</td>\n",
+       "      <td>0.346328</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FG_40_rolling5</th>\n",
-       "      <td>0.237817</td>\n",
+       "      <td>0.229683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>FG_30_rolling5</th>\n",
-       "      <td>0.205280</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DEF_FG_30_rolling5</th>\n",
-       "      <td>0.200022</td>\n",
+       "      <td>0.205683</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DEF_PointsScored_rolling5</th>\n",
-       "      <td>0.185981</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PointsScored_rolling5</th>\n",
-       "      <td>0.171476</td>\n",
+       "      <td>0.194375</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -455,36 +461,27 @@
       ],
       "text/plain": [
        "                            Kicker_Pts\n",
-       "Kicker_Pts_rolling5           0.475565\n",
-       "DEF_Kicker_Pts_rolling5       0.462105\n",
-       "DEF_FieldGoalGood_rolling5    0.344189\n",
-       "FieldGoalGood_rolling5        0.342829\n",
-       "DEF_FG_40_rolling5            0.241117\n",
-       "FG_40_rolling5                0.237817\n",
-       "FG_30_rolling5                0.205280\n",
-       "DEF_FG_30_rolling5            0.200022\n",
-       "DEF_PointsScored_rolling5     0.185981\n",
-       "PointsScored_rolling5         0.171476"
+       "DEF_Kicker_Pts2               0.994070\n",
+       "Kicker_Pts2_rolling5          0.470879\n",
+       "Kicker_Pts_rolling5           0.469575\n",
+       "DEF_Kicker_Pts_rolling5       0.466118\n",
+       "DEF_Kicker_Pts2_rolling5      0.463410\n",
+       "DEF_FieldGoalGood_rolling5    0.352015\n",
+       "FieldGoalGood_rolling5        0.346328\n",
+       "FG_40_rolling5                0.229683\n",
+       "FG_30_rolling5                0.205683\n",
+       "DEF_PointsScored_rolling5     0.194375"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corrmat = pd.DataFrame(data09to17.corr()['Kicker_Pts'])\n",
+    "corrmat = pd.DataFrame(data09_17.corr()['Kicker_Pts'])\n",
     "corrmat.sort_values('Kicker_Pts', ascending=False)[2:12]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -492,56 +489,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data09to17.drop(['gameid', 'Drive', 'Week', 'DEF_Drive', 'DEF_Week', 'DEF_gameid', \n",
-    "           'defenseTeam','CompletePass_rolling5', 'ExPointBad_rolling5', 'TwoPointGood_rolling5', \n",
-    "           'DEF_TwoPointConv_rolling5', 'DEF_CompletePass_rolling5', 'DEF_ExPointBad_rolling5', \n",
-    "           'DEF_TwoPointGood_rolling5','DEF_FieldGoalBad_rolling5', 'DEF_Kicker_Pts'], \n",
-    "          axis=1, inplace=True)\n",
     "X = data09to17.drop('Kicker_Pts', axis=1)\n",
     "y = data09to17['Kicker_Pts']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "Xtrain, Xtest, ytrain, ytest = train_test_split(X, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "rf = RandomForestRegressor(n_estimators = 1000, random_state = 2018)\n",
-    "rf.fit(Xtrain, ytrain);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Absolute Error: 3.32\n"
-     ]
-    }
-   ],
-   "source": [
-    "predictions = rf.predict(Xtest)\n",
-    "errors = abs(predictions - ytest)\n",
-    "print('Mean Absolute Error:', round(np.mean(errors), 2))"
    ]
   },
   {
@@ -563,19 +512,10 @@
    "source": [
     "from scipy.stats import norm\n",
     "\n",
-    "sns.distplot(ytest, bins=20, fit=norm,\n",
+    "sns.distplot(y, bins=20, fit=norm,\n",
     "            kde_kws={\"color\": \"k\", \"lw\": 3, \"label\": \"KDE\"},\n",
     "            hist_kws={\"histtype\": \"step\", \"linewidth\": 3,\"alpha\": 1, \"color\": \"g\"});"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
