--- a/1_Kickers_NFLData.ipynb
+++ b/1_Kickers_NFLData.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -230,49 +230,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 24,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def add_rolling(pivot_weekly, pivot_def):\n",
+    "\n",
+    "def add_rolling(pivot_weekly, pivot_def, N):\n",
+    "    #piv_list_O = []\n",
+    "    #piv_list_D = []\n",
+    "    firstPass = True\n",
+    "    \n",
     "    pivotO = pivot_weekly.copy()\n",
-    "\n",
-    "    for val in pivot_weekly.columns:\n",
-    "        pivotO[val+'_rolling5'] = 0\n",
-    "\n",
-    "    for idx in pivotO.index.levels[0]:\n",
-    "        for val in pivot_weekly.columns:\n",
-    "            pivotO[val+'_rolling5'][idx] = pivotO[val][idx].rolling(5).mean()\n",
-    "        \n",
     "    pivotD = pivot_def.copy()\n",
     "\n",
-    "    for val in pivot_def.columns:\n",
-    "        pivotD[val+'_rolling5'] = 0\n",
+    "    for n in N:\n",
+    "        \n",
     "\n",
-    "    for idx in pivotD.index.levels[0]:\n",
+    "        for val in pivot_weekly.columns:\n",
+    "            pivotO[val+'_rolling'+str(n)] = 0\n",
+    "\n",
+    "        for idx in pivotO.index.levels[0]:\n",
+    "            for val in pivot_weekly.columns:\n",
+    "                pivotO[val+'_rolling'+str(n)][idx] = pivotO[val][idx].rolling(n).mean()\n",
+    "        \n",
+    "\n",
     "        for val in pivot_def.columns:\n",
-    "            pivotD[val+'_rolling5'][idx] = pivotD[val][idx].rolling(5).mean()\n",
-    "            \n",
-    "    pivotO.drop(dropVals_off, axis=1, inplace=True)\n",
-    "    pivotO = pivotO[ pivotO['Week']<1000]\n",
-    "    pivotO = pivotO[ pivotO['CompletePass_rolling5']>-1] \n",
-    "    pivotD.drop(dropVals_def, axis=1, inplace=True)\n",
-    "    pivotD = pivotD[ pivotD['DEF_Week']<1000]\n",
-    "    pivotD = pivotD[ pivotD['DEF_CompletePass_rolling5']>-1]\n",
-    "    \n",
-    "    pivotO['FG_range_per_drive'] = pivotO['FG_range_rolling5']/pivotO['Drive_rolling5']\n",
-    "    pivotO['RZ_per_drive'] = pivotO['RedZone_rolling5']/pivotO['Drive_rolling5']\n",
-    "    pivotD['DEF_FG_range_per_drive'] = pivotD['DEF_FG_range_rolling5']/pivotD['DEF_Drive_rolling5']\n",
-    "    pivotD['DEF_RZ_per_drive'] = pivotD['DEF_RedZone_rolling5']/pivotD['DEF_Drive_rolling5']\n",
+    "            pivotD[val+'_rolling'+str(n)] = 0\n",
     "\n",
+    "        for idx in pivotD.index.levels[0]:\n",
+    "            for val in pivot_def.columns:\n",
+    "                pivotD[val+'_rolling'+str(n)][idx] = pivotD[val][idx].rolling(n).mean()\n",
+    "                \n",
+    "        try:    \n",
+    "            pivotO.drop(dropVals_off, axis=1, inplace=True)\n",
+    "        except:\n",
+    "            a=1\n",
+    "        pivotO = pivotO[ pivotO['Week']<1000]\n",
+    "        pivotO = pivotO[ pivotO['CompletePass_rolling'+str(n)]>-1] \n",
+    "        try:\n",
+    "            pivotD.drop(dropVals_def, axis=1, inplace=True)\n",
+    "        except:\n",
+    "            a=1\n",
+    "        pivotD = pivotD[ pivotD['DEF_Week']<1000]\n",
+    "        pivotD = pivotD[ pivotD['DEF_CompletePass_rolling'+str(n)]>-1]\n",
+    "    \n",
+    "        if firstPass:\n",
+    "            k = ''\n",
+    "            firstPass=False\n",
+    "        else: \n",
+    "            k=str(n)\n",
+    "        \n",
+    "        pivotO['FG_range_per_drive'+k] = pivotO['FG_range_rolling'+str(n)]/pivotO['Drive_rolling'+str(n)]\n",
+    "        pivotO['RZ_per_drive'+k] = pivotO['RedZone_rolling'+str(n)]/pivotO['Drive_rolling'+str(n)]\n",
+    "        pivotD['DEF_FG_range_per_drive'+k] = pivotD['DEF_FG_range_rolling'+str(n)]/pivotD['DEF_Drive_rolling'+str(n)]\n",
+    "        pivotD['DEF_RZ_per_drive'+k] = pivotD['DEF_RedZone_rolling'+str(n)]/pivotD['DEF_Drive_rolling'+str(n)]\n",
+    "\n",
+    "        #piv_list_O.append(pivotO)\n",
+    "        #piv_list_D.append(pivotD)\n",
+    "        \n",
+    "    #pivotOff = pd.concat(piv_list_O, axis=1) \n",
+    "    #pivotDef = pd.concat(piv_list_D, axis=1)\n",
     "    return pivotO, pivotD"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -293,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -319,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -332,7 +355,7 @@
     "        df = add_features(nfldata)\n",
     "        df = sort_by_week(df)\n",
     "        pivot_drives, pivot_weekly, pivot_def = make_pivot_tables(df)\n",
-    "        pivot_off, pivot_def = add_rolling(pivot_weekly, pivot_def)\n",
+    "        pivot_off, pivot_def = add_rolling(pivot_weekly, pivot_def, [5])\n",
     "        train = make_train_data(df, pivot_off, pivot_def)\n",
     "        train['Season'] = year\n",
     "        #save_train_data(train, year)\n",
@@ -343,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -390,6 +413,60 @@
    "source": [
     "data09_17 = make_annual_dfs(2009, 2017)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data2011 = make_annual_dfs(2011,2012)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
