--- a/1_Kickers_NFLData.ipynb
+++ b/1_Kickers_NFLData.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -183,17 +183,17 @@
     "        'FG_range': np.sum, 'RedZone':np.sum,'PointsScored': np.sum, 'Punt':np.sum, 'QB Kneel':np.sum, \n",
     "         'Drive': max, 'Kicker_Pts':np.sum, '3rdDown': np.sum, '3rdDownSuccess':np.sum, 'Week': max, 'gameid': max,\n",
     "        'FirstDown':np.sum, }\n",
-    "\n",
+    "k=str(3)\n",
     "dropVals_off = ['CompletePass','ExPointBad', 'ExPointGood', 'FG_30', 'FG_40',\n",
     "       'FG_50', 'FG_range', 'FieldGoalBad', 'FieldGoalGood', 'IncompletePass', 'PointsScored', 'Punt', 'QB Kneel', 'RedZone',\n",
     "       'Touchdown', 'TwoPointGood','Yards.Gained', 'Week_rolling5',\n",
-    "        'gameid_rolling5']\n",
+    "        'gameid_rolling'+k]\n",
     "dropVals_def = ['DEF_CompletePass','DEF_ExPointBad', 'DEF_ExPointGood',\n",
     "       'DEF_FG_30', 'DEF_FG_40', 'DEF_FG_50', 'DEF_FG_range', 'DEF_Kicker_Pts',\n",
     "       'DEF_FieldGoalBad', 'DEF_FieldGoalGood', 'DEF_IncompletePass', 'DEF_PointsScored', 'DEF_Punt', 'DEF_QB Kneel',\n",
     "       'DEF_RedZone', 'DEF_Touchdown', 'DEF_TwoPointConv', 'DEF_TwoPointGood', \n",
     "        'DEF_3rdDown',  'DEF_Drive', 'DEF_3rdDown', 'DEF_gameid',  \n",
-    "        'DEF_QB Kneel_rolling5', 'DEF_gameid_rolling5']"
+    "        'DEF_QB Kneel_rolling'+k, 'DEF_gameid_rolling'+k]"
    ]
   },
   {
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -355,7 +355,7 @@
     "        df = add_features(nfldata)\n",
     "        df = sort_by_week(df)\n",
     "        pivot_drives, pivot_weekly, pivot_def = make_pivot_tables(df)\n",
-    "        pivot_off, pivot_def = add_rolling(pivot_weekly, pivot_def, [5])\n",
+    "        pivot_off, pivot_def = add_rolling(pivot_weekly, pivot_def, [3])\n",
     "        train = make_train_data(df, pivot_off, pivot_def)\n",
     "        train['Season'] = year\n",
     "        #save_train_data(train, year)\n",
@@ -366,18 +366,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def finish_up_df(X):\n",
-    "    X['punts_per_drive'] = X['Punt_rolling5']/X['Drive_rolling5']\n",
-    "    X['DEF_punts_per_drive'] = X['DEF_Punt_rolling5']/X['DEF_Drive_rolling5']\n",
-    "    X.drop(['DEF_ExPointBad_rolling5', 'DEF_FG_30_rolling5', 'DEF_FG_40_rolling5', 'DEF_Week', \n",
-    "            'DEF_Week_rolling5','DEF_FG_50_rolling5', 'DEF_FieldGoalBad_rolling5', 'DEF_Punt_rolling5',\n",
-    "            'DEF_TwoPointConv_rolling5', 'DEF_TwoPointGood_rolling5'], axis=1, inplace=True)\n",
+    "    n=str(3)\n",
+    "\n",
+    "    X['punts_per_drive'] = X['Punt_rolling'+n]/X['Drive_rolling'+n]\n",
+    "    X['DEF_punts_per_drive'] = X['DEF_Punt_rolling'+n]/X['DEF_Drive_rolling'+n]\n",
+    "    X.drop(['DEF_ExPointBad_rolling'+n, 'DEF_FG_30_rolling'+n, 'DEF_FG_40_rolling'+n, 'DEF_Week', \n",
+    "            'DEF_Week_rolling'+n,'DEF_FG_50_rolling'+n, 'DEF_FieldGoalBad_rolling'+n, 'DEF_Punt_rolling'+n,\n",
+    "            'DEF_TwoPointConv_rolling'+n, 'DEF_TwoPointGood_rolling'+n], axis=1, inplace=True)\n",
     "    X['gameid'] = X['gameid'].astype(str)\n",
     "    X['date'] = (X['gameid'].str[4:6] + '/' + X['gameid'].str[6:8]).str.lstrip('0')\n",
     "    X['offenseTeam']= X['offenseTeam'].str[0:4].str.strip('-')\n",
@@ -385,13 +387,13 @@
     "    X['Season'] = X['Season'].astype(str)\n",
     "    X['mergeCode'] = X['Season'] + '-' + X['date'] +'-'+ X['offenseTeam']\n",
     "    X['mergeCode2'] = X['Season']+'-'+ X['Week'].astype(str)+'-' + X['offenseTeam']\n",
-    "    X['3rdDown_rate'] = X['3rdDownSuccess_rolling5']/X['3rdDown_rolling5']\n",
+    "    X['3rdDown_rate'] = X['3rdDownSuccess_rolling'+n]/X['3rdDown_rolling'+n]\n",
     "    \n",
     "    # these currently not working \n",
     "    # CompletePass_rolling5 is 0s\n",
-    "    X['Completion_pct'] = X['CompletePass_rolling5']/(X['CompletePass_rolling5']+X['IncompletePass_rolling5'])\n",
-    "    X['DEF_Completion_pct'] = X['DEF_CompletePass_rolling5']/(X['DEF_CompletePass_rolling5']+X['DEF_IncompletePass_rolling5'])\n",
-    "    X['TwoPoint_conv_rate'] = X['TwoPointGood_rolling5']/X['TwoPointConv_rolling5']\n",
+    "    X['Completion_pct'] = X['CompletePass_rolling'+n]/(X['CompletePass_rolling'+n]+X['IncompletePass_rolling'+n])\n",
+    "    X['DEF_Completion_pct'] = X['DEF_CompletePass_rolling'+n]/(X['DEF_CompletePass_rolling'+n]+X['DEF_IncompletePass_rolling'+n])\n",
+    "    X['TwoPoint_conv_rate'] = X['TwoPointGood_rolling'+n]/X['TwoPointConv_rolling'+n]\n",
     "\n",
     "    return X"
    ]
@@ -416,57 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data2011 = make_annual_dfs(2011,2012)"
+    "# rolling 3\n",
+    "data09_17_3 = make_annual_dfs(2009, 2017)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "#data09_17_3.to_csv('kicker_data_rolling3.csv')"
+   ]
   },
   {
    "cell_type": "code",
@@ -476,15 +445,37 @@
    },
    "outputs": [],
    "source": [
-    "data09_17.to_csv('kicker_data_09_17.csv')"
+    "#data09_17.to_csv('kicker_data_09_17.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 38,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'data09_17' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-38-5b71cd3311fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcorrmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata09_17\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcorr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Kicker_Pts'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcorrmat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Kicker_Pts'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'data09_17' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "corrmat = pd.DataFrame(data09_17.corr()['Kicker_Pts'])\n",
+    "corrmat.sort_values('Kicker_Pts', ascending=False)[2:12]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -512,44 +503,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>DEF_Kicker_Pts_rolling5</th>\n",
-       "      <td>0.466118</td>\n",
+       "      <th>Kicker_Pts_rolling3</th>\n",
+       "      <td>0.585525</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>DEF_FieldGoalGood_rolling5</th>\n",
-       "      <td>0.352015</td>\n",
+       "      <th>DEF_Kicker_Pts_rolling3</th>\n",
+       "      <td>0.584677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FieldGoalGood_rolling5</th>\n",
-       "      <td>0.346328</td>\n",
+       "      <th>DEF_FieldGoalGood_rolling3</th>\n",
+       "      <td>0.447679</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>FG_40_rolling5</th>\n",
-       "      <td>0.229683</td>\n",
+       "      <th>FieldGoalGood_rolling3</th>\n",
+       "      <td>0.441918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PointsScored</th>\n",
+       "      <td>0.339417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FG_40_rolling3</th>\n",
+       "      <td>0.300114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FieldGoalBad</th>\n",
+       "      <td>0.287533</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FG_30_rolling3</th>\n",
+       "      <td>0.284240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yards.Gained</th>\n",
+       "      <td>0.229642</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DEF_Yards.Gained</th>\n",
        "      <td>0.229642</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FG_30_rolling5</th>\n",
-       "      <td>0.205683</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DEF_PointsScored_rolling5</th>\n",
-       "      <td>0.194375</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>PointsScored_rolling5</th>\n",
-       "      <td>0.182112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>FG_50_rolling5</th>\n",
-       "      <td>0.120468</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DEF_Yards.Gained_rolling5</th>\n",
-       "      <td>0.116418</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -557,26 +548,26 @@
       ],
       "text/plain": [
        "                            Kicker_Pts\n",
-       "DEF_Kicker_Pts_rolling5       0.466118\n",
-       "DEF_FieldGoalGood_rolling5    0.352015\n",
-       "FieldGoalGood_rolling5        0.346328\n",
-       "FG_40_rolling5                0.229683\n",
-       "DEF_Yards.Gained              0.229642\n",
-       "FG_30_rolling5                0.205683\n",
-       "DEF_PointsScored_rolling5     0.194375\n",
-       "PointsScored_rolling5         0.182112\n",
-       "FG_50_rolling5                0.120468\n",
-       "DEF_Yards.Gained_rolling5     0.116418"
+       "Kicker_Pts_rolling3           0.585525\n",
+       "DEF_Kicker_Pts_rolling3       0.584677\n",
+       "DEF_FieldGoalGood_rolling3    0.447679\n",
+       "FieldGoalGood_rolling3        0.441918\n",
+       "PointsScored                  0.339417\n",
+       "FG_40_rolling3                0.300114\n",
+       "FieldGoalBad                  0.287533\n",
+       "FG_30_rolling3                0.284240\n",
+       "Yards.Gained                  0.229642\n",
+       "DEF_Yards.Gained              0.229642"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corrmat = pd.DataFrame(data09_17.corr()['Kicker_Pts'])\n",
-    "corrmat.sort_values('Kicker_Pts', ascending=False)[2:12]"
+    "corrmat2 = pd.DataFrame(data09_17_3.drop(['FG_30', 'FG_40', 'FG_50'],axis=1).corr()['Kicker_Pts'])\n",
+    "corrmat2.sort_values('Kicker_Pts', ascending=False)[2:12]"
    ]
   },
   {
